--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    hello todo list22
-    2222   
+    <main>
+        <h1>ToDo List</h1>
+        <form action="form.html">
+            <input type="text" placeholder="입력">
+            <button type="submit">추가</button>
+            <ul>
+            </ul>
+            <a id="clear" href="#">모두 삭제</a>
+        </form>
+    </main>
+
+    <script type="text/JavaScript" src="index.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 </body>
 </html>
